# git-trim

./: .editorconfig  .gitattributes  .gitignore  .mergify.yaml  .mergify.yml  .pre-commit-config.actions.yaml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build-man.sh  build.rs  git-cleanup  git_cleanup.py  package.json  setup.py  tests.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  python.yaml  release.yaml
docs/: git-trim.1  git-trim.man  git-trim.md  git-trim.md.1  git-trim.md.1.html
npm/: getBinary.js  prepublish.js  uninstall.js
src/: args.rs  branch.rs  config.rs  core.rs  error.rs  lib.rs  main.rs  merge_tracker.rs  porcelain_outputs.rs  remote_head_change_checker.rs  remote_heads_prefetcher.rs  remote_ref.rs  simple_glob.rs  subprocess.rs  util.rs
tests/: config.rs  filter_accidential_track.rs  filter_accidential_track_porcelain.rs  hub_cli_checkout.rs  merge_styles.rs  non_trackings_non_upstreams.rs  orphan.rs  simple_git_flow.rs  simple_github_flow.rs  simple_pr_workflow.rs  triangular_git_flow.rs  triangular_github_flow.rs  triangular_pr_workflow.rs  worktree.rs
tests/fixture/: mod.rs
