[package]
name = "git-trim"
description = "Automatically trims your tracking branches whose upstream branches are merged or stray"
license = "MIT"
version = "0.4.4"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
repository = "https://github.com/foriequal0/git-trim"
readme = "README.md"
keywords = ["git", "branch", "prune", "trim"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.65"
build = "build.rs"
default-run = "git-trim"

[[bin]]
name = "build-man"
required-features = ["build-man"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-man = ["man"]

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }
anyhow = "1.0.86"

[dependencies]
dialoguer = "0.11.0"
env_logger = "0.11.3"
git2 = "0.18.3"
log = "0.4.21"
paw = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
rayon = "1.10.0"
thiserror = "1.0.61"
crossbeam-channel = "0.5.13"
textwrap = { version = "0.16.1", features = ["terminal_size"] }

man = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
