[package]
authors = [ "SeongChan Lee <foriequal@gmail.com>" ]
build = "build.rs"
categories = [ "command-line-utilities", "development-tools" ]
default-run = "git-trim"
description = "Automatically trims your tracking branches whose upstream branches are merged or stray"
edition = "2021"
keywords = [ "git", "branch", "prune", "trim" ]
license = "MIT"
name = "git-trim"
readme = "README.md"
repository = "https://github.com/foriequal0/git-trim"
rust-version = "1.65"
version = "0.4.4"

[[bin]]
name = "build-man"
required-features = [ "build-man" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-man = [ "man" ]

[build-dependencies]
vergen-git2 = { version = "1.0.1", features = [ "build", "cargo", "rustc" ] }

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = [ "derive" ] }
crossbeam-channel = "0.5.13"
dialoguer = "0.11.0"
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
paw = "1.0.0"
rayon = "1.10.0"
textwrap = { version = "0.16.1", features = [ "terminal_size" ] }
thiserror = "1.0.63"

man = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3.12.0"
