[package]
name = "git-trim"
description = "Automatically trims your tracking branches whose upstream branches are merged or stray"
license = "MIT"
version = "0.4.4"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
repository = "https://github.com/foriequal0/git-trim"
readme = "README.md"
keywords = ["git", "branch", "prune", "trim"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.65"
build = "build.rs"
default-run = "git-trim"

[[bin]]
name = "build-man"
required-features = ["build-man"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-man = ["man"]

[build-dependencies]
anyhow = "1.0.95"
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.14"
dialoguer = "0.11.0"
env_logger = "0.11.6"
git2 = "0.19.0"
log = "0.4.22"
man = { version = "0.3.0", optional = true }
paw = "1.0.0"
rayon = "1.10.0"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
thiserror = "2.0.9"

[dev-dependencies]
tempfile = "3.3.0"
